fix: preloader z-index position on 768px and lower

--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -81,7 +81,7 @@
     height: 100vh;
     background-color: rgba(0, 0, 0, .3);
     opacity: 1;
-    z-index: 1;
+    z-index: 2;
   }
 
   .nav__wrapper_visible .nav {
